tdf#100495 sw: Exchange Database shouldn't delete the created odb file

(regression from f01f31201f9b26b3071ab25f9a5a3a0311ff7423)

Change-Id: Ie5b83a82711229bda045b7ef7a9167cfd873f616
(cherry picked from commit 5a042dad2779eefc76269e14b888bd84df590aac)
Reviewed-on: https://gerrit.libreoffice.org/26723
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>